[package]
name = "fst-file-cli"
version = "0.1.0"
edition = "2021"
authors = ["Shogo Takata <peshogo@gmail.com>"]
description = "Parse and look at FST wafeform files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
color-eyre = "0.6.2"
fst-file = { path = "../fst-file" }
serde_json = "1.0.96"
termion = "2.0.1"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
