[package]
name = "fst-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
deflate = "1.0.0"
enum-primitive-derive = "0.2.2"
flate2 = "1.0.26"
gzp = "0.11.3"
lzzzz = "1.0.4"
nom = "7.1.3"
num = "0.4.0"
num-traits = "0.2.15"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
