[package]
name = "fst-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
enum-primitive-derive = "0.2.2"
flate2 = "1.0.26"
lz4_flex = "0.11.1"
nom = "7.1.3"
num-traits = "0.2.15"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
serde_json = "1.0.96"
